# multi-Beamforming

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
changelogs/: 2026-05-05_architecture-refactor.md  2026-05-05_fb-implementation.md  2026-05-05_fft-fista-algorithm.md  2026-05-05_initial-state.md  2026-05-05_signal-visualization.md  2026-05-06_architecture-cleanup.md  2026-05-06_project-review.md  2026-05-07_environment-docs-entrypoint.md  2026-05-07_experimental-simplification.md
docs/: DAMAS-FISTA单声源实验需求.md  架构改进意见.md  项目复盘总结.md
scripts/: run_damas_fista_single_source.py
src/beamforming_sim/: __init__.py  array_geometry.py  beamforming.py  scene.py  signals.py  visualization.py
src/beamforming_sim/algorithms/: __init__.py  base.py  cbf.py  damas_fista.py  fb.py  fft_fista.py
src/beamforming_sim/domain/: __init__.py  array.py  result.py  scan.py  source.py
src/beamforming_sim/experiments/: __init__.py  cases.py  config.py  damas_fista.py  runner.py  writer.py
src/beamforming_sim/spectral/: __init__.py  csm.py
tests/: test_architecture.py  test_cbf.py  test_damas_fista.py  test_fb.py  test_fft_fista.py  test_simulation_setup.py  test_visualization.py
